# ifdh-art

./: CMakeLists.txt  CMakePresets.json  README  buildifdh_art.sh
ifdh_art/: CMakeLists.txt
ifdh_art/AtomicNumber/: AtomicNumber.dox  CMakeLists.txt  README.md
ifdh_art/AtomicNumber/Providers/: AtomicNumber.h  CMakeLists.txt  atomic_number_standard.fcl
ifdh_art/AtomicNumber/Services/: AtomicNumberService.h  AtomicNumberService_service.cc  CMakeLists.txt
ifdh_art/ConditionsDataService/: CMakeLists.txt  ConditionsData.cc  ConditionsData_service.cc  ConditionsData_service.h
ifdh_art/ConditionsDataService/Providers/: CMakeLists.txt  CMakeLists_mine.txt  ConditionsData.h  example_config.fcl
ifdh_art/ConditionsDataService/Services/: CMakeLists.txt  ConditionsDataService.h  ConditionsDataService_service.cc  ConditionsData_service.cc  ConditionsData_service.h
ifdh_art/IFBeamService/: CMakeLists.txt  IFBeam.cc  IFBeam_service.cc  IFBeam_service.h
ifdh_art/IFCatalogInterface/: CMakeLists.txt  IFCatalogInterface.cc  IFCatalogInterface_service.cc  IFCatalogInterface_service.h
ifdh_art/IFDHService/: CMakeLists.txt  IFDH.cc  IFDH_service.cc  IFDH_service.h
ifdh_art/IFFileTransfer/: CMakeLists.txt  IFFileTransfer.cc  IFFileTransfer_service.cc  IFFileTransfer_service.h
ifdh_art/NUconDBService/: CMakeLists.txt  NUconDB.cc  NUconDB_service.cc  NUconDB_service.h
ifdh_art/nucondbService/: CMakeLists.txt  nucondb_service.cc
obsolete/: build_multi.sh  build_node_setup.sh  buildifdh_art.sh  ifdh_art.table  makefq.sh
src/: CMakeLists.txt
src/IFBeamService/: CMakeLists.txt  IFBeamService.cc  IFBeamService.h  IFBeam_service.cc  IFBeam_service.h
src/IFCatalogInterface/: CMakeLists.txt  CatalogInterface.h  IFCatalogInterface.cc  IFCatalogInterface.h  IFCatalogInterface_service.cc  IFCatalogInterface_service.h
src/IFDHService/: CMakeLists.txt  IFDHService.h  IFDH_service.cc  IFDH_service.h
src/IFFileTransfer/: CMakeLists.txt  FileTransfer.h  IFFileTransfer.cc  IFFileTransfer.h  IFFileTransfer_service.cc  IFFileTransfer_service.h
src/nucondbService/: CMakeLists.txt  nucondbService.h  nucondb_service.cc  nucondb_service.h
tests/: test_art_sam_wrap.sh
ups/: build_multi.sh  build_node_setup.sh  ifdh_art.table  product_deps  product_deps.e4  setup_for_development
ups/mwm/: build_multi.sh
